Remove 'isExiting' logic from closing sequence

The flag was preventing Krusader from exiting if Krusader::queryClose() was
called but the exit was later cancelled (e.g. by a file save dialog of
KrViewer).

And the destructor Krusader::~Krusader() is not called on a SIGTERM signal
anyways.

FIXED: [ 409473 ] Computer shutdown gets cancelled
BUG: 409473