krusader/krusader.cpp
@@ -108,7 +108,7 @@ QAction *Krusader::actShowJSConsole = 0;
 // construct the views, statusbar and menu bars and prepare Krusader to start
 Krusader::Krusader(const QCommandLineParser &parser) : KParts::MainWindow(nullptr,
                 Qt::Window | Qt::WindowTitleHint | Qt::WindowContextHelpButtonHint),
-        _listPanelActions(nullptr), isStarting(true), isExiting(false), _quit(false)
+        _listPanelActions(nullptr), isStarting(true), _quit(false)
 {
     // create the "krusader"
     App = this;
@@ -287,8 +287,6 @@ Krusader::Krusader(const QCommandLineParser &parser) : KParts::MainWindow(nullpt
 Krusader::~Krusader()
 {
     KrTrashHandler::stopWatcher();
-    if (!isExiting) // save the settings if it was not saved (SIGTERM received)
-        saveSettings();
 
     delete MAIN_VIEW;
     MAIN_VIEW = nullptr;
@@ -456,7 +454,7 @@ void Krusader::showEvent(QShowEvent *event)
 }
 
 bool Krusader::queryClose() {
-    if (isStarting || isExiting)
+    if (isStarting)
         return false;
 
     if (qApp->isSavingSession()) { // KDE is logging out, accept the close
@@ -525,8 +523,6 @@ void Krusader::acceptClose() {
 
     QDBusConnection dbus = QDBusConnection::sessionBus();
     dbus.unregisterObject("/Instances/" + Krusader::AppName);
-
-    isExiting = true;
 }
 
 // the please wait dialog functions
